crates/plotnik-lib/tests/05-typegen/definitions/error_captured_ref_to_skippable_def.txt
A = (identifier)??
Q = (A) @x
==== diagnostics ====
error: the referenced definition doesn't match exactly one node, so there is no single node to bind
 --> query.ptk:2:5
  |
1 | A = (identifier)??
  |     -------------- defined here
2 | Q = (A) @x
  |     ^^^
  |
help: capture nodes inside the definition, or drop this capture
